:boom: ライフが変わった時は必ずlifeChangedを送る
